{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 577,
  "lineage": "be7d98e3-dc6e-d84f-bcfb-da1ee2e77b29",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "efs_managed_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:instance/i-0c40d3523252fd71e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0c40d3523252fd71e",
            "instance_id": "i-0c40d3523252fd71e",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "key_name": "awesomekey",
            "launch_time": "2024-09-29T03:33:59Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0830f45a708ec5f18",
            "placement_partition_number": 0,
            "private_dns": "ip-10-250-2-242.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.2.242",
            "public_dns": "ec2-54-180-79-251.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.79.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03bc3264eabe24ee0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e727447e56b4fac3",
            "tags": {
              "Name": "prd_efs_managed_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fb51f340d5f1a4ea"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_nat_eip_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a527c6a42c85372b",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:elastic-ip/eipalloc-0a527c6a42c85372b",
            "domain": "vpc",
            "id": "eipalloc-0a527c6a42c85372b",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-34-35-134.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.35.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev_nat_eip_2a"
            },
            "tags_all": {
              "Name": "dev_nat_eip_2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prd_nat_eip_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051cdef2bdbe938b0",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:elastic-ip/eipalloc-051cdef2bdbe938b0",
            "domain": "vpc",
            "id": "eipalloc-051cdef2bdbe938b0",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-207-153.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.207.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prd_nat_eip_2a"
            },
            "tags_all": {
              "Name": "prd_nat_eip_2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_bastion_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:instance/i-04ccc313dbe563562",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ccc313dbe563562",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058ebe9e5d76a1be7",
            "private_dns": "ip-10-230-1-240.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.1.240",
            "public_dns": "ec2-3-38-153-115.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.153.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034943eb994c47fd4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a5595aca94bde30",
            "tags": {
              "Name": "dev_bastion_2a"
            },
            "tags_all": {
              "Name": "dev_bastion_2a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0231f5e7b639460ab"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_bastion_security",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu_22_04_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_eks-managed-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:instance/i-0530dc285999ec89c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0530dc285999ec89c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d1420eb34786f1d",
            "private_dns": "ip-10-230-1-241.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.1.241",
            "public_dns": "ec2-43-200-7-116.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.7.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06355ed137993e213",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a5595aca94bde30",
            "tags": {
              "Name": "dev_eks_managed_Server"
            },
            "tags_all": {
              "Name": "dev_eks_managed_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0231f5e7b639460ab"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_bastion_security",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu_22_04_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:instance/i-05d0b58430f859a4e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d0b58430f859a4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b91e5d7451147fe4",
            "private_dns": "ip-10-250-1-242.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.242",
            "public_dns": "ec2-52-79-100-131.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.100.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08769d290f3be76c9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4ae5ef56595d923",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ebac709ca9f95fa"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_security",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prd-eks-managed-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:instance/i-05ae6afd7ed992bfd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ae6afd7ed992bfd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-015fcdee4eb63fae0",
            "private_dns": "ip-10-250-2-241.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.2.241",
            "public_dns": "ec2-13-209-49-165.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.49.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f21d243c70bec1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e727447e56b4fac3",
            "tags": {
              "Name": "prd_eks_managed_Server"
            },
            "tags_all": {
              "Name": "prd_eks_managed_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb51f340d5f1a4ea"
            ]
          },
          "dependencies": [
            "aws_security_group.prd_bastion_security",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prd_bastion_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:instance/i-068dade85e88eac5d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068dade85e88eac5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09833b342645711b9",
            "private_dns": "ip-10-250-1-240.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.240",
            "public_dns": "ec2-3-36-59-98.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.59.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ddd913a80d1e723",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4ae5ef56595d923",
            "tags": {
              "Name": "prd_bastion_2a"
            },
            "tags_all": {
              "Name": "prd_bastion_2a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb51f340d5f1a4ea"
            ]
          },
          "dependencies": [
            "aws_security_group.prd_bastion_security",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prd_efs_managed_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:instance/i-0c40d3523252fd71e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c40d3523252fd71e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0830f45a708ec5f18",
            "private_dns": "ip-10-250-2-242.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.2.242",
            "public_dns": "ec2-54-180-79-251.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.79.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03bc3264eabe24ee0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e727447e56b4fac3",
            "tags": {
              "Name": "prd_efs_managed_Server"
            },
            "tags_all": {
              "Name": "prd_efs_managed_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb51f340d5f1a4ea"
            ]
          },
          "dependencies": [
            "aws_security_group.prd_bastion_security",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub_argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:instance/i-0825568eb3e7336e5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0825568eb3e7336e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09522ecdd52edec87",
            "private_dns": "ip-10-250-1-241.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.241",
            "public_dns": "ec2-3-36-55-116.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.55.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de9d2c3968c51192",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4ae5ef56595d923",
            "tags": {
              "Name": "prd_argocd"
            },
            "tags_all": {
              "Name": "prd_argocd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb51f340d5f1a4ea"
            ]
          },
          "dependencies": [
            "aws_security_group.prd_bastion_security",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:internet-gateway/igw-0534de518325e0c8f",
            "id": "igw-0534de518325e0c8f",
            "owner_id": "784849575779",
            "tags": {
              "Name": "dev_igw"
            },
            "tags_all": {
              "Name": "dev_igw"
            },
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:internet-gateway/igw-037eda9e3e1f67030",
            "id": "igw-037eda9e3e1f67030",
            "owner_id": "784849575779",
            "tags": {
              "Name": "prd_igw"
            },
            "tags_all": {
              "Name": "prd_igw"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a527c6a42c85372b",
            "association_id": "eipassoc-0d70c42cd80a30c66",
            "connectivity_type": "public",
            "id": "nat-0a348fc1da4c7438f",
            "network_interface_id": "eni-0d6b61ba4e7fb4ed2",
            "private_ip": "10.230.1.61",
            "public_ip": "3.34.35.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06a5595aca94bde30",
            "tags": {
              "Name": "dev_nat_2a"
            },
            "tags_all": {
              "Name": "dev_nat_2a"
            }
          },
          "dependencies": [
            "aws_eip.dev_nat_eip_2a",
            "aws_internet_gateway.dev_igw",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prd_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051cdef2bdbe938b0",
            "association_id": "eipassoc-07e5879d63cffdcae",
            "connectivity_type": "public",
            "id": "nat-06bf9e97c41aceec0",
            "network_interface_id": "eni-01bf0220a2e75ef12",
            "private_ip": "10.250.1.158",
            "public_ip": "3.37.207.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b4ae5ef56595d923",
            "tags": {
              "Name": "prd_nat_2a"
            },
            "tags_all": {
              "Name": "prd_nat_2a"
            }
          },
          "dependencies": [
            "aws_eip.prd_nat_eip_2a",
            "aws_internet_gateway.prd_igw",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:route-table/rtb-01f8ad11b975f3f8c",
            "id": "rtb-01f8ad11b975f3f8c",
            "owner_id": "784849575779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a348fc1da4c7438f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " dev_pri_rt_2a"
            },
            "tags_all": {
              "Name": " dev_pri_rt_2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev_nat_eip_2a",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat_2a",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:route-table/rtb-0342751f8cf7b0d04",
            "id": "rtb-0342751f8cf7b0d04",
            "owner_id": "784849575779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a348fc1da4c7438f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " dev_pri_rt_2c"
            },
            "tags_all": {
              "Name": " dev_pri_rt_2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev_nat_eip_2a",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat_2a",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:route-table/rtb-01b4d240736aa1e00",
            "id": "rtb-01b4d240736aa1e00",
            "owner_id": "784849575779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0534de518325e0c8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.250.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06e8fe9632ca1d8a6"
              }
            ],
            "tags": {
              "Name": "dev_pub_rt"
            },
            "tags_all": {
              "Name": "dev_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc",
            "aws_vpc_peering_connection.prd_dev_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:route-table/rtb-0999e7e6bb9109a5e",
            "id": "rtb-0999e7e6bb9109a5e",
            "owner_id": "784849575779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06bf9e97c41aceec0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " prd_pri_rt_2a"
            },
            "tags_all": {
              "Name": " prd_pri_rt_2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prd_nat_eip_2a",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:route-table/rtb-0d15af56b77e66c43",
            "id": "rtb-0d15af56b77e66c43",
            "owner_id": "784849575779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06bf9e97c41aceec0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " prd_pri_rt_2c"
            },
            "tags_all": {
              "Name": " prd_pri_rt_2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prd_nat_eip_2a",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:route-table/rtb-0b89d809ffbedd26f",
            "id": "rtb-0b89d809ffbedd26f",
            "owner_id": "784849575779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037eda9e3e1f67030",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.230.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06e8fe9632ca1d8a6"
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.240.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-0532817afcad38799",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.250.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prd_pub_rt"
            },
            "tags_all": {
              "Name": "prd_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prd_igw",
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc",
            "aws_vpc_peering_connection.prd_dev_peer",
            "aws_vpn_gateway.prd_vpn_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a2fd169139dd86a",
            "route_table_id": "rtb-01f8ad11b975f3f8c",
            "subnet_id": "subnet-07c9036b9dd0b910a"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip_2a",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat_2a",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_db_sub_a",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd96568ed3ff47da",
            "route_table_id": "rtb-0342751f8cf7b0d04",
            "subnet_id": "subnet-09e274dfd4a911d7e"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip_2a",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat_2a",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_db_sub_c",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b68e69672555c4aa",
            "route_table_id": "rtb-01f8ad11b975f3f8c",
            "subnet_id": "subnet-04f891312819926ac"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip_2a",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat_2a",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_node_sub_a",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001b90d5ce4ffebf6",
            "route_table_id": "rtb-0342751f8cf7b0d04",
            "subnet_id": "subnet-059b451531eb8f5a2"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip_2a",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat_2a",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_node_sub_c",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaa2ad461873727d",
            "route_table_id": "rtb-01b4d240736aa1e00",
            "subnet_id": "subnet-06a5595aca94bde30"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_pub_rt",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc",
            "aws_vpc_peering_connection.prd_dev_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ef61a0b59e08b66",
            "route_table_id": "rtb-01b4d240736aa1e00",
            "subnet_id": "subnet-0431a99deededbb02"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_pub_rt",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc",
            "aws_vpc_peering_connection.prd_dev_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaf977eaadeb4595",
            "route_table_id": "rtb-0999e7e6bb9109a5e",
            "subnet_id": "subnet-0c957050c2395f880"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip_2a",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_a",
            "aws_subnet.prd_db_sub_a",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5a8913c9ff3c126",
            "route_table_id": "rtb-0d15af56b77e66c43",
            "subnet_id": "subnet-05b4530efe1c69b82"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip_2a",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_c",
            "aws_subnet.prd_db_sub_c",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028298d82de69bd2b",
            "route_table_id": "rtb-0999e7e6bb9109a5e",
            "subnet_id": "subnet-03b70dde8c6b039d4"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip_2a",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_a",
            "aws_subnet.prd_node_sub_a",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0344aa1bc1b5868bb",
            "route_table_id": "rtb-0d15af56b77e66c43",
            "subnet_id": "subnet-009e98cd36ecd3161"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip_2a",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_c",
            "aws_subnet.prd_node_sub_c",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078c7e02a09afc2d5",
            "route_table_id": "rtb-0b89d809ffbedd26f",
            "subnet_id": "subnet-0b4ae5ef56595d923"
          },
          "dependencies": [
            "aws_internet_gateway.prd_igw",
            "aws_route_table.prd_pub_rt",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc",
            "aws_vpc_peering_connection.prd_dev_peer",
            "aws_vpn_gateway.prd_vpn_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d69fb266189563c",
            "route_table_id": "rtb-0b89d809ffbedd26f",
            "subnet_id": "subnet-0e727447e56b4fac3"
          },
          "dependencies": [
            "aws_internet_gateway.prd_igw",
            "aws_route_table.prd_pub_rt",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc",
            "aws_vpc_peering_connection.prd_dev_peer",
            "aws_vpn_gateway.prd_vpn_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-0231f5e7b639460ab",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0231f5e7b639460ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.250.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-bastion-sg"
            },
            "tags_all": {
              "Name": "dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-0918644ba06b11a16",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0918644ba06b11a16",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev_db20240929033308840500000009",
            "name_prefix": "dev_db",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_allow_mysql_db"
            },
            "tags_all": {
              "Name": "dev_allow_mysql_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-0895b5d3d68b2f2d9",
            "description": "Allow access to Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0895b5d3d68b2f2d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "dev_redis_sg",
            "name_prefix": "",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_redis_sg"
            },
            "tags_all": {
              "Name": "dev_redis_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-01722ab70cbf53d12",
            "description": "Allow NFS traffic for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01722ab70cbf53d12",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.250.0.0/16"
                ],
                "description": "NFS from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-security-group"
            },
            "tags_all": {
              "Name": "efs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-05ebac709ca9f95fa",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ebac709ca9f95fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_sg"
            },
            "tags_all": {
              "Name": "jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prd_bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-0fb51f340d5f1a4ea",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb51f340d5f1a4ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.230.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-bastion-sg"
            },
            "tags_all": {
              "Name": "prd-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prd_db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-03f740616db889023",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f740616db889023",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "prd_db2024092903331045650000000a",
            "name_prefix": "prd_db",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd_allow_mysql_db"
            },
            "tags_all": {
              "Name": "prd_allow_mysql_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prd_dms_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-0f2ff414d9046b8ce",
            "description": "Security group for PRD DMS Replication Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2ff414d9046b8ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 500
              }
            ],
            "name": "prd-dms-sg",
            "name_prefix": "",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-dms-sg"
            },
            "tags_all": {
              "Name": "prd-dms-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prd_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-0599e4568c60e50df",
            "description": "Allow access to Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0599e4568c60e50df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "prd_redis_sg",
            "name_prefix": "",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd_redis_sg"
            },
            "tags_all": {
              "Name": "prd_redis_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prd_vpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:security-group/sg-059394e518a41c916",
            "description": "Security group for PRD VPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059394e518a41c916",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 500
              },
              {
                "cidr_blocks": [
                  "10.240.0.0/16"
                ],
                "description": "",
                "from_port": 50,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "50",
                "security_groups": [],
                "self": false,
                "to_port": 50
              }
            ],
            "name": "prd-vpn-sg",
            "name_prefix": "",
            "owner_id": "784849575779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-vpn-sg"
            },
            "tags_all": {
              "Name": "prd-vpn-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-07c9036b9dd0b910a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c9036b9dd0b910a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_db_sub_2a"
            },
            "tags_all": {
              "Name": "dev_db_sub_2a"
            },
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-09e274dfd4a911d7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e274dfd4a911d7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_db_sub_2c"
            },
            "tags_all": {
              "Name": "dev_db_sub_2c"
            },
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-04f891312819926ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f891312819926ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_node_sub_2a"
            },
            "tags_all": {
              "Name": "dev_node_sub_2a"
            },
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-059b451531eb8f5a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059b451531eb8f5a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-node-sub-2c"
            },
            "tags_all": {
              "Name": "dev-node-sub-2c"
            },
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-06a5595aca94bde30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a5595aca94bde30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pub_sub_2a"
            },
            "tags_all": {
              "Name": "dev_pub_sub_2a"
            },
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-0431a99deededbb02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0431a99deededbb02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pub_sub_2c"
            },
            "tags_all": {
              "Name": "dev_pub_sub_2c"
            },
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_redis_sub_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-0079d1c3bdcbdef35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.24.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0079d1c3bdcbdef35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_redis_sub_2a"
            },
            "tags_all": {
              "Name": "dev_redis_sub_2a"
            },
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_redis_sub_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-0e0cc29485fb5a755",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.25.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0cc29485fb5a755",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_redis_sub_2c"
            },
            "tags_all": {
              "Name": "dev_redis_sub_2c"
            },
            "vpc_id": "vpc-0e6d88d05122b431b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-0c957050c2395f880",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c957050c2395f880",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_db_sub_2a"
            },
            "tags_all": {
              "Name": "prd_db_sub_2a"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-05b4530efe1c69b82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b4530efe1c69b82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_db_sub_2c"
            },
            "tags_all": {
              "Name": "prd_db_sub_2c"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-03b70dde8c6b039d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b70dde8c6b039d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_node_sub_2a"
            },
            "tags_all": {
              "Name": "prd_node_sub_2a"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-009e98cd36ecd3161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009e98cd36ecd3161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd-node-sub-2c"
            },
            "tags_all": {
              "Name": "prd-node-sub-2c"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-0b4ae5ef56595d923",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4ae5ef56595d923",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_pub_sub_a"
            },
            "tags_all": {
              "Name": "prd_pub_sub_a"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-0e727447e56b4fac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e727447e56b4fac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_pub_sub_c"
            },
            "tags_all": {
              "Name": "prd_pub_sub_c"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_redis_sub_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-02d442964d2500193",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.24.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d442964d2500193",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_redis_sub_2a"
            },
            "tags_all": {
              "Name": "prd_redis_sub_2a"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_redis_sub_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:subnet/subnet-0eb653134be0a17d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.25.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb653134be0a17d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784849575779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_redis_sub_2c"
            },
            "tags_all": {
              "Name": "prd_redis_sub_2c"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:vpc/vpc-0e6d88d05122b431b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/16",
            "default_network_acl_id": "acl-0b8a86be2baad94fc",
            "default_route_table_id": "rtb-04d1d5b3be8d9cdbf",
            "default_security_group_id": "sg-0bc506a6e5eb6c903",
            "dhcp_options_id": "dopt-0b98d6e4e8d43368c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e6d88d05122b431b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d1d5b3be8d9cdbf",
            "owner_id": "784849575779",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:784849575779:vpc/vpc-02d4d06e15e81e6d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-046c67be4fb3d088c",
            "default_route_table_id": "rtb-037211e54255c612c",
            "default_security_group_id": "sg-0260d62eee943bc89",
            "dhcp_options_id": "dopt-0b98d6e4e8d43368c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d4d06e15e81e6d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037211e54255c612c",
            "owner_id": "784849575779",
            "tags": {
              "Name": "prd_vpc"
            },
            "tags_all": {
              "Name": "prd_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "prd_dev_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-06e8fe9632ca1d8a6",
            "peer_owner_id": "784849575779",
            "peer_region": "ap-northeast-2",
            "peer_vpc_id": "vpc-0e6d88d05122b431b",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "prd-dev-peering"
            },
            "tags_all": {
              "Name": "prd-dev-peering"
            },
            "vpc_id": "vpc-02d4d06e15e81e6d5"
          },
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    }
  ]
}